--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -527,9 +527,6 @@ body{
 .sticky{
   position: sticky;
 }
-.-right-1{
-  right: -0.25rem;
-}
 .bottom-0{
   bottom: 0px;
 }
@@ -542,29 +539,14 @@ body{
 .top-0{
   top: 0px;
 }
-.-right-10{
-  right: -2.5rem;
-}
-.-right-3\.5{
-  right: -0.875rem;
-}
-.-right-3{
-  right: -0.75rem;
-}
-.-right-4{
-  right: -1rem;
-}
-.-right-2\.5{
-  right: -0.625rem;
-}
 .z-10{
   z-index: 10;
 }
+.z-20{
+  z-index: 20;
+}
 .z-50{
   z-index: 50;
-}
-.z-30{
-  z-index: 30;
 }
 .mx-auto{
   margin-left: auto;
@@ -575,15 +557,6 @@ body{
 }
 .mt-3{
   margin-top: 0.75rem;
-}
-.ml-3{
-  margin-left: 0.75rem;
-}
-.mr-6{
-  margin-right: 1.5rem;
-}
-.-mr-3\.5{
-  margin-right: -0.875rem;
 }
 .block{
   display: block;
@@ -605,6 +578,9 @@ body{
 }
 .h-11{
   height: 2.75rem;
+}
+.h-14{
+  height: 3.5rem;
 }
 .h-16{
   height: 4rem;
@@ -636,8 +612,11 @@ body{
 .h-px{
   height: 1px;
 }
-.max-h-\[calc\(100vh-224px\)\]{
-  max-height: calc(100vh - 224px);
+.max-h-\[calc\(100vh-14rem\)\]{
+  max-height: calc(100vh - 14rem);
+}
+.max-h-\[calc\(100vh-156px\)\]{
+  max-height: calc(100vh - 156px);
 }
 .max-h-\[calc\(100vh-250px\)\]{
   max-height: calc(100vh - 250px);
@@ -645,9 +624,8 @@ body{
 .max-h-\[calc\(100vh-4rem\)\]{
   max-height: calc(100vh - 4rem);
 }
-.max-h-min{
-  max-height: -moz-min-content;
-  max-height: min-content;
+.max-h-\[calc\(100vh-64px\)\]{
+  max-height: calc(100vh - 64px);
 }
 .min-h-max{
   min-height: -moz-max-content;
@@ -661,6 +639,9 @@ body{
 }
 .w-1\.5{
   width: 0.375rem;
+}
+.w-16{
+  width: 4rem;
 }
 .w-2\/3{
   width: 66.666667%;
@@ -680,67 +661,33 @@ body{
 .w-9{
   width: 2.25rem;
 }
+.w-\[90\%\]{
+  width: 90%;
+}
 .w-\[95\%\]{
   width: 95%;
+}
+.w-fit{
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .w-full{
   width: 100%;
 }
-.w-\[90\%\]{
-  width: 90%;
-}
-.max-w-\[21\.0625rem\]{
-  max-width: 21.0625rem;
-}
-.max-w-\[32\.75rem\]{
-  max-width: 32.75rem;
-}
 .max-w-\[337px\]{
   max-width: 337px;
 }
+.max-w-\[524px\]{
+  max-width: 524px;
+}
 .max-w-base{
   max-width: 90rem;
-}
-.max-w-\[95\%\]{
-  max-width: 95%;
 }
 .flex-1{
   flex: 1 1 0%;
 }
 .shrink-0{
   flex-shrink: 0;
-}
-.translate-x-3\.5{
-  --tw-translate-x: 0.875rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-translate-x-3\.5{
-  --tw-translate-x: -0.875rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-5{
-  --tw-translate-x: 1.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-3{
-  --tw-translate-x: 0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-0{
-  --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-1{
-  --tw-translate-x: 0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-px{
-  --tw-translate-x: 1px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-\[\.0313rem\]{
-  --tw-translate-x: .0313rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer{
   cursor: pointer;
@@ -841,9 +788,6 @@ body{
 .overflow-hidden{
   overflow: hidden;
 }
-.overflow-x-auto{
-  overflow-x: auto;
-}
 .overflow-y-auto{
   overflow-y: auto;
 }
@@ -905,6 +849,9 @@ body{
 .bg-brand-gray-500{
   --tw-bg-opacity: 1;
   background-color: rgb(152 169 188 / var(--tw-bg-opacity));
+}
+.bg-brand-gray-500\/15{
+  background-color: rgb(152 169 188 / 0.15);
 }
 .bg-brand-green{
   --tw-bg-opacity: 1;
@@ -1018,8 +965,8 @@ body{
 .pt-4{
   padding-top: 1rem;
 }
-.pr-6{
-  padding-right: 1.5rem;
+.pb-16{
+  padding-bottom: 4rem;
 }
 .text-center{
   text-align: center;
@@ -1032,8 +979,12 @@ body{
   font-size: 1.375rem;
   line-height: 2rem;
 }
+.text-h3{
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+}
 .text-h4{
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 1.6875rem;
 }
 .text-sm{
@@ -1056,6 +1007,10 @@ body{
 .text-brand-gray-400{
   --tw-text-opacity: 1;
   color: rgb(119 140 162 / var(--tw-text-opacity));
+}
+.text-brand-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(152 169 188 / var(--tw-text-opacity));
 }
 .text-brand-green{
   --tw-text-opacity: 1;
@@ -1101,7 +1056,7 @@ body{
   background-color: rgb(204 204 204 / var(--tw-bg-opacity));
 }
 
-.task-details-list::-webkit-scrollbar{
+.no-scroll::-webkit-scrollbar{
   height: 0px;
   width: 0px;
 }
