--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -518,6 +518,9 @@ body{
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }
+.fixed{
+  position: fixed;
+}
 .absolute{
   position: absolute;
 }
@@ -526,6 +529,9 @@ body{
 }
 .sticky{
   position: sticky;
+}
+.inset-0{
+  inset: 0px;
 }
 .bottom-0{
   bottom: 0px;
@@ -548,6 +554,9 @@ body{
 .z-50{
   z-index: 50;
 }
+.z-\[60\]{
+  z-index: 60;
+}
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -569,6 +578,9 @@ body{
 }
 .mt-8{
   margin-top: 2rem;
+}
+.mt-10{
+  margin-top: 2.5rem;
 }
 .block{
   display: block;
@@ -621,6 +633,9 @@ body{
 .h-5{
   height: 1.25rem;
 }
+.h-52{
+  height: 3.25rem;
+}
 .h-6{
   height: 1.5rem;
 }
@@ -635,6 +650,12 @@ body{
 }
 .h-\[1\.375rem\]{
   height: 1.375rem;
+}
+.h-\[2\.875rem\]{
+  height: 2.875rem;
+}
+.h-\[7\.75rem\]{
+  height: 7.75rem;
 }
 .h-full{
   height: 100%;
@@ -758,8 +779,8 @@ body{
 .max-w-\[337px\]{
   max-width: 337px;
 }
-.max-w-\[524px\]{
-  max-width: 524px;
+.max-w-\[46\.9375rem\]{
+  max-width: 46.9375rem;
 }
 .max-w-\[90px\]{
   max-width: 90px;
@@ -772,6 +793,10 @@ body{
 }
 .shrink-0{
   flex-shrink: 0;
+}
+.border-spacing-y-2\.5{
+  --tw-border-spacing-y: 0.625rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 .cursor-pointer{
   cursor: pointer;
@@ -793,6 +818,9 @@ body{
 }
 .items-center{
   align-items: center;
+}
+.justify-center{
+  justify-content: center;
 }
 .justify-between{
   justify-content: space-between;
@@ -832,6 +860,13 @@ body{
 }
 .gap-8{
   gap: 2rem;
+}
+.gap-x-6{
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gap-y-3{
+  row-gap: 0.75rem;
 }
 .space-y-1 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
@@ -916,6 +951,9 @@ body{
 .border-r{
   border-right-width: 1px;
 }
+.border-dashed{
+  border-style: dashed;
+}
 .border-none{
   border-style: none;
 }
@@ -933,6 +971,9 @@ body{
 }
 .bg-brand-blue\/15{
   background-color: rgb(77 124 254 / 0.15);
+}
+.bg-brand-dark\/80{
+  background-color: rgb(37 38 49 / 0.8);
 }
 .bg-brand-gray-100{
   --tw-bg-opacity: 1;
@@ -1047,6 +1088,18 @@ body{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.py-\[1\.125rem\]{
+  padding-top: 1.125rem;
+  padding-bottom: 1.125rem;
+}
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
 .pb-16{
   padding-bottom: 4rem;
 }
@@ -1092,6 +1145,24 @@ body{
 .pt-6{
   padding-top: 1.5rem;
 }
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+.pt-20{
+  padding-top: 5rem;
+}
+.pt-80{
+  padding-top: 20rem;
+}
+.pt-40{
+  padding-top: 10rem;
+}
+.pt-44{
+  padding-top: 11rem;
+}
+.pt-60{
+  padding-top: 15rem;
+}
 .text-center{
   text-align: center;
 }
@@ -1114,6 +1185,10 @@ body{
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 .font-light{
   font-weight: 300;
@@ -1148,9 +1223,16 @@ body{
   --tw-text-opacity: 1;
   color: rgb(254 77 151 / var(--tw-text-opacity));
 }
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+.outline-brand-blue{
+  outline-color: #4D7CFE;
 }
 .transition-all{
   transition-property: all;
@@ -1225,6 +1307,16 @@ input[type="checkbox"]:checked + label p{
   background-color: rgb(248 250 251 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-brand-dark-blue:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(65 105 216 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-brand-gray-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 236 239 / var(--tw-bg-opacity));
+}
+
 .group:hover .group-hover\:bg-brand-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 251 / var(--tw-bg-opacity));
@@ -1243,5 +1335,24 @@ input[type="checkbox"]:checked + label p{
 
   .xl\:block{
     display: block;
+  }
+
+  .xl\:p-0{
+    padding: 0px;
+  }
+
+  .xl\:pt-40{
+    padding-top: 10rem;
+  }
+
+  .xl\:pb-10{
+    padding-bottom: 2.5rem;
+  }
+}
+
+@media (min-width: 90rem){
+
+  .\32xl\:p-0{
+    padding: 0px;
   }
 }
