add/settings poppup

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -688,6 +688,9 @@ body{
 .min-h-screen{
   min-height: 100vh;
 }
+.min-h-\[calc\(100vh-120px\)\]{
+  min-height: calc(100vh - 120px);
+}
 .w-0\.5{
   width: 0.125rem;
 }
